add get started documentation